--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,1 +1,26 @@
-<p>contact-us works!</p>
+<div class="contact-us">
+    <h1>Love to hear from You.</h1>
+    <div class="row">
+      <div class="col-md-9">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        <iframe src="https://maps.app.goo.gl/NoU6tn9z8XqK9Nxy6" frameborder="0" width="100%" height="250px" style="border: 0;" allowfullscreen=""></iframe>
+      </div>
+      <div class="col-md-3">
+        <h3>Postal Address</h3>
+        <p>
+         Ramji mandir
+            <br>
+          Balasinor
+          Gujarat
+          India <br>
+          Pin Code - 388255
+        </p>
+        <h3> hellygoswami1810&#64;gmail.com</h3>
+        <p><strong>Office:</strong> contact&#64;gmail.com</p>
+        <p><strong>Personal:</strong> personal&#64;gmail.com</p>
+        <h3>Phone:</h3>
+        <p><strong>Office:</strong>+91 123456789</p>
+        <p><strong>Personal:</strong>+91 987654321</p>
+      </div>
+    </div>
+  </div>
