--- a/src/app/admin/admin-dash/admin-dash.component.html
+++ b/src/app/admin/admin-dash/admin-dash.component.html
@@ -52,7 +52,7 @@
           </div>
           <div class="progress">
             <div class="progress-bar bg-info" role="progressbar" [ngStyle]="{'width.%':inactive_product}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Inactive Products: {{inactive_product}}</div>
-          </div>.
+          </div>
           
           <div class="progress">
             <div class="progress-bar bg-warning" role="progressbar" [ngStyle]="{'width.%':draft_product}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Draft Products: {{draft_product}}</div>
